--- a/service-monitor.yaml
+++ b/service-monitor.yaml
@@ -1,12 +1,12 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: simple-app-primary
+  name: simple-app
   namespace: monitoring
 spec:
   endpoints:
     - path: /metrics
-      port: "app"
+      port: "prometheus"
       interval: 5s
   namespaceSelector:
     matchNames:
