--- a/simple-app.yaml
+++ b/simple-app.yaml
@@ -33,4 +33,8 @@ spec:
       port: 80
       targetPort: 8080
       name: "app"
+    - protocol: TCP
+      port: 8000
+      targetPort: 8000
+      name: "prometheus"
   type: LoadBalancer
